syntax = "proto3";

option csharp_namespace = "Ventixe.MVC.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package event;

service EventProto {
	rpc GetAllEvents (google.protobuf.Empty) returns (GetAllEventsReply);
    rpc GetEventById (GetEventByIdRequest) returns (GetEventByIdReply);
    rpc CreateEvent (Event) returns (EventReply);
    rpc UpdateEvent (Event) returns (EventReply);
    rpc DeleteEvent (GetEventByIdRequest) returns (EventReply);
    rpc GetEventsByCategory (CategoryIdRequest) returns (GetAllEventsReply);
    rpc GetEventsByLocation (LocationIdRequest) returns (GetAllEventsReply);
    rpc GetEventsByStatus (StatusIdRequest) returns (GetAllEventsReply);
}

service StatusProto {
    rpc GetAllStatuses (google.protobuf.Empty) returns (GetAllStatusesReply);
}

service CategoryProto {
    rpc GetAllCategories (google.protobuf.Empty) returns (GetAllCategoriesReply);
}
service LocationProto {
    rpc GetAllLocations (google.protobuf.Empty) returns (GetAllLocationsReply);
}


message Event {
	string EventId = 1;
    string EventTitle = 2;
    string EventImage = 3;
    string Description = 4;
    google.protobuf.Timestamp Date = 5;
    double Price = 6;
    int32 Quantity = 7;
    int32 SoldQuantity = 8;
    Category Category = 9;
    Location Location = 10;
    Status Status = 11;
}

message GetAllEventsReply {
	repeated Event Events = 1;
}

message Category {
    string CategoryId = 1;
    string CategoryName = 2;
}
message Location {
    string LocationId = 1;
    string Address = 3;
    string City = 4;
}

message Status {
    string StatusId = 1;
    string StatusName = 2;
}

message GetEventByIdRequest {
    string EventId = 1;
}
message GetEventByIdReply {
    int32 StatusCode = 1;
    Event Event = 2;
}

message EventReply{
    int32 StatusCode = 1;
    string Message = 2;
}
message CategoryIdRequest {
    string CategoryId = 1;
}
message LocationIdRequest {
    string LocationId = 1;
}
message StatusIdRequest {
    string StatusId = 1;
}
message GetAllStatusesReply {
    repeated Status status = 1;
}
message GetAllCategoriesReply {
    repeated Category category = 1;
}
message GetAllLocationsReply {
    repeated Location location = 1;
}